--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,12 +25,13 @@
         <activity android:name=".OCMain" />
         <activity android:name=".OCAdd" />
         <activity android:name=".OCDelete" />
-        <activity android:name=".OCInfor"/>
-        <activity android:name=".PatientListActivity"/>
-        <activity android:name=".RecordDetailActivity"/>
-        <activity android:name=".RegistrationFormActivity"/>
-        <activity android:name=".DoctorFragmentDetailActivity"/>
-        <activity android:name=".DentistFragmentDetailActivity"/>
+        <activity android:name=".OCInfor" />
+        <activity android:name=".OCResultRoute"/>
+        <activity android:name=".PatientListActivity" />
+        <activity android:name=".RecordDetailActivity" />
+        <activity android:name=".RegistrationFormActivity" />
+        <activity android:name=".DoctorFragmentDetailActivity" />
+        <activity android:name=".DentistFragmentDetailActivity" />
     </application>
 
 </manifest>
